add integration spec

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,5 +15,5 @@
     <label for="description">Place Location</label>
     <input type="text" id="location" name="location">
   </div>
-  <button type="submit" name="button">Add Place</button>
+  <button type="submit" name="send" id="send">Add Place</button>
 </form>
